--- a/index.html
+++ b/index.html
@@ -147,16 +147,6 @@
                 <figcaption>A group of friends laughing and playing a board game.</figcaption>
                 <p style="font-style: italic;">Prompt: Group of people playing board games</p>
             </figure>
-            <table>
-                <tr>
-                    <th>Member Name</th>
-                    <th>Favorite Game</th>
-                </tr>
-                <tr>
-                    <td>John Doe</td>
-                    <td>Catan</td>
-                </tr>
-            </table>
             <p>We organize regular game nights, workshops, and tournaments to foster a sense of camaraderie and friendly competition.</p>
             <p>Everyone is welcome to join our community, regardless of their experience level.</p>
         </section>
@@ -168,13 +158,12 @@
                 <figcaption>A clock surrounded by board game pieces, showing the time.</figcaption>
                 <p style="font-style: italic;">Prompt: Clock with board game pieces</p>
             </figure>
-            <form>
-                <label for="rsvp">RSVP for Game Night:</label>
-                <input type="email" id="rsvp" name="rsvp" placeholder="Your Email">
-                <button type="submit">Submit</button>
-            </form>
             <p>Check our online calendar for upcoming events and to RSVP for game nights.</p>
             <p>We recommend arriving early to secure a spot and meet fellow gamers.</p>
         </section>
         <section id="where">
-            <h2>Location and
+            <h2>Location and Venues</h2>
+            <p>We primarily meet at the Community Center located at 123 Main Street. Our venue is spacious and equipped with tables and chairs for comfortable gameplay. One of our major shops are located in London to </p>
+            <figure>
+                <img src="https://image.pollinations.ai/prompt/Map%20with%20board%20game%20markers?width=512&height=512&nologo=true" alt="Map with Board Game Markers">
+                <figcaption>A map showing the location of the Community
