--- a/index.html
+++ b/index.html
@@ -116,23 +116,17 @@
 </head>
 <body>
     <header>
-    <h1>Board Game Bonanza</h1>
-    <nav>
-        <a href="#what" onclick="showSection('what')">Home</a>
-        🎲
-        <a href="#who" onclick="showSection('who')">About</a>
-        🎲
-        <a href="#when" onclick="showSection('when')">When</a>
-        🎲
-        <a href="#where" onclick="showSection('where')">Where</a>
-        🎲
-        <a href="#how" onclick="showSection('how')">How</a>
-        🎲
-        <a href="#why" onclick="showSection('why')">Why</a>
-        🎲
-        <a href="#ai-prompt" onclick="showSection('ai-prompt')">AI Prompt</a>
-    </nav>
-</header>
+        <h1>Board Game Bonanza</h1>
+        <nav>
+            <a href="#what" onclick="showSection('what')">Home</a>
+            <a href="#who" onclick="showSection('who')">About</a>
+            <a href="#when" onclick="showSection('when')">When</a>
+            <a href="#where" onclick="showSection('where')">Where</a>
+            <a href="#how" onclick="showSection('how')">How</a>
+            <a href="#why" onclick="showSection('why')">Why</a>
+            <a href="#ai-prompt" onclick="showSection('ai-prompt')">AI Prompt</a>
+        </nav>
+    </header>
     <main>
         <section id="what">
             <h2>What is  a Board Game Bonanza?</h2>
@@ -142,8 +136,10 @@
                 <figcaption>A diverse collection of different board games laid out on a table. Easy to learn hard to master! </figcaption>
                 <p style="font-style: italic;">Prompt: Board game table top view</p>
             </figure>
-            <p>Our goal is to create a vibrant community where both novice and veteran gamers can discover new board games and experince the hobby in a different way from before .</p>
+            <p>Our goal is to create a vibrant community where both novice and veteran gamers can discover new board games and experience the hobby in a different way from before .</p>
             <p>Join us and experience the  endless possibilities of board game entertainment!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </section>
         <section id="who">
             <h2>About Our Community</h2>
@@ -155,20 +151,8 @@
             </figure>
             <p>We organize regular game nights, workshops, and tournaments to foster a sense of camaraderie and friendly competition.</p>
             <p>Everyone is welcome to join our community, regardless of their experience level.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </section>
         <section id="when">
             <h2>Game Night Schedule</h2>
-            <p>Our weekly game nights are held every Friday evening from 7 PM to 10 PM. We also host special events and tournaments on weekends.</p>
-            <figure>
-                <img src="https://image.pollinations.ai/prompt/Clock%20with%20board%20game%20pieces?width=512&height=512&nologo=true" alt="Clock with Board Game Pieces">
-                <figcaption>A clock surrounded by board game pieces, showing the time.</figcaption>
-                <p style="font-style: italic;">Prompt: Clock with board game pieces</p>
-            </figure>
-            <p>Check our online calendar for upcoming events and to RSVP for game nights.</p>
-            <p>We recommend arriving early to secure a spot and meet fellow gamers.</p>
-        </section>
-        <section id="where">
-            <h2>Location and Venues</h2>
-            <p>We primarily meet at the Community Center located at 123 Main Street. Our venue is spacious and equipped with tables and chairs for comfortable gameplay. One of our major shops are located in London to </p>
-            <figure>
-                <img src="https://image.pollinations.ai/prompt/Map%20with%20board%20game%20markers?width=512&height=512&nologo=true" alt="Map with Board Game Markers
