--- a/index.html
+++ b/index.html
@@ -129,19 +129,19 @@
     </header>
     <main>
         <section id="what">
-            <h2>What is a Board Game Bonanza?</h2>
-            <p>Welcome to Board Game Bonanza, your ultimate source for all things about tabletop gaming! Experience a diverse world of board games, from intricate strategy titles to lighthearted party games.</p>
+            <h2>What is  a Board Game Bonanza?</h2>
+            <p>Welcome to Board Game Bonanza, your ultimate source for all things about  tabletop gaming! Experience a diverse world of board games, from intricate strategy titles to lighthearted party games.</p>
             <figure>
                 <img src="https://image.pollinations.ai/prompt/Board%20game%20table%20top%20view?width=512&height=512&nologo=true" alt="Board Game Table Top View">
                 <figcaption>A diverse collection of different board games laid out on a table. Easy to learn hard to master! </figcaption>
                 <p style="font-style: italic;">Prompt: Board game table top view</p>
             </figure>
             <p>Our goal is to create a vibrant community where both novice and veteran gamers can discover new board games and experince the hobby in a different way from before .</p>
-            <p>Join us and experience the endless possibilities of board game entertainment!</p>
+            <p>Join us and experience the  endless possibilities of board game entertainment!</p>
         </section>
         <section id="who">
             <h2>About Our Community</h2>
-            <p>Our community is built on the shared love for board games. We are a diverse and quirky group of individuals who come together to play, learn, and design different games. In order to appeal to our consumers. </p>
+            <p>Our community is built on the shared love for board games. We are a diverse and quirky  group of individuals who come together to play, learn, and design different games. In order to appeal to our consumers. </p>
             <figure>
                 <img src="https://image.pollinations.ai/prompt/Group%20of%20people%20playing%20board%20games?width=512&height=512&nologo=true" alt="Group Playing Board Games">
                 <figcaption>A group of friends laughing and playing a board game.</figcaption>
@@ -166,4 +166,56 @@
             <p>We primarily meet at the Community Center located at 123 Main Street. Our venue is spacious and equipped with tables and chairs for comfortable gameplay. One of our major shops are located in London to </p>
             <figure>
                 <img src="https://image.pollinations.ai/prompt/Map%20with%20board%20game%20markers?width=512&height=512&nologo=true" alt="Map with Board Game Markers">
-                <figcaption>A map showing the location of the Community
+                <figcaption>A map showing the location of the Community Center and other venues.</figcaption>
+                <p style="font-style: italic;">Prompt: Map with board game markers</p>
+            </figure>
+            <p>Occasionally, we organize outdoor game sessions at local parks during the summer months.</p>
+            <p>We also collaborate with local cafes and game stores for special events and promotions.</p>
+        </section>
+        <section id="how">
+            <h2>Getting Started</h2>
+            <p>If you're new to board games, don't worry! We offer introductory sessions and tutorials for beginners. Our experienced members are always happy to help you learn the rules and strategies.</p>
+            <figure>
+                <img src="https://image.pollinations.ai/prompt/Hands%20setting%20up%20a%20board%20game?width=512&height=512&nologo=true" alt="Hands Setting Up a Board Game">
+                <figcaption>Hands setting up a complex board game.</figcaption>
+                <p style="font-style: italic;">Prompt: Hands setting up a board game</p>
+            </figure>
+            <p>We recommend starting with simple games and gradually moving to more complex ones as you gain experience.</p>
+        </section>
+        <section id="why">
+            <h2>Why Board Game Bonanza?</h2>
+            <p>At Board Game Bonanza, we aim to provide an inclusive space for people to relax and socialize through gaming. Whether you’re a strategy mastermind or someone looking for a fun way to unwind, our events offer a welcoming atmosphere for everyone.</p>
+            <figure>
+                <img src="https://image.pollinations.ai/prompt/Group%20of%20people%20laughing%20and%20playing%20board%20games?width=512&height=512&nologo=true" alt="People Laughing and Playing Board Games">
+                <figcaption>A group of people laughing and playing board games.</figcaption>
+                <p style="font-style: italic;">Prompt: Group of people laughing and playing board games</p>
+            </figure>
+            <p>We believe board games can bring people together, foster creativity, and strengthen community bonds.</p>
+        </section>
+        <section id="ai-prompt" class="ai-tab">
+            <h2>AI Generated Prompt</h2>
+            <p>This is a list of prompts used to generate images for our site:</p>
+            <ul>
+                <li>Group of people laughing and playing board games</li>
+                <li>Board game table top view</li>
+                <li>Group of people playing board games</li>
+                <li>Clock with board game pieces</li>
+                <li>Map with board game markers</li>
+                <li>Hands setting up a board game</li>
+                <li> Description for how board games?</li>
+                <li> Description for why board games? </li>
+                <li> Description for when board games?</li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 Board Game Bonanza. All rights reserved.</p>
+        <p>Website designed by <a href="https://swayamtripathy973.github.io/SwayamTripathy973/itis3135/Tripathywebsolutions.co/index.html" target="_blank">Tripathywebsolutions.co</a></p>
+        <div class="validation-buttons">
+            <a href="https://validator.w3.org/" target="_blank">HTML Validator</a>
+            <a href="https://jigsaw.w3.org/css-validator/" target="_blank">CSS Validator</a>
+            <a href="https://www.w3.org/WAI/WCAG21/quickref/" target="_blank">Disability/Accessibility</a>
+        </div>
+    </footer>
+</body>
+</html>
