--- a/index.html
+++ b/index.html
@@ -116,17 +116,17 @@
 </head>
 <body>
     <header>
-        <h1>Board Game Bonanza</h1>
-        <nav>
-            <a href="#what" onclick="showSection('what')">Home</a>
-            <a href="#who" onclick="showSection('who')">About</a>
-            <a href="#when" onclick="showSection('when')">When</a>
-            <a href="#where" onclick="showSection('where')">Where</a>
-            <a href="#how" onclick="showSection('how')">How</a>
-            <a href="#why" onclick="showSection('why')">Why</a>
-            <a href="#ai-prompt" onclick="showSection('ai-prompt')">AI Prompt</a>
-        </nav>
-    </header>
+    <h1>Board Game Bonanza</h1>
+    <nav>
+        <a href="#what" onclick="showSection('what')">Home 🎲</a>
+        <a href="#who" onclick="showSection('who')">About 🎲</a>
+        <a href="#when" onclick="showSection('when')">When 🎲</a>
+        <a href="#where" onclick="showSection('where')">Where 🎲</a>
+        <a href="#how" onclick="showSection('how')">How 🎲</a>
+        <a href="#why" onclick="showSection('why')">Why 🎲</a>
+        <a href="#ai-prompt" onclick="showSection('ai-prompt')">AI Prompt 🎲</a>
+    </nav>
+</header>
     <main>
         <section id="what">
             <h2>What is  a Board Game Bonanza?</h2>
