--- a/index.html
+++ b/index.html
@@ -116,32 +116,32 @@
 </head>
 <body>
     <header>
-    <h1>Board Game Bonanza</h1>
-    <nav>
-        <a href="#what" onclick="showSection('what')">Home 🎲</a>
-        <a href="#who" onclick="showSection('who')">About 🎲</a>
-        <a href="#when" onclick="showSection('when')">When 🎲</a>
-        <a href="#where" onclick="showSection('where')">Where 🎲</a>
-        <a href="#how" onclick="showSection('how')">How 🎲</a>
-        <a href="#why" onclick="showSection('why')">Why 🎲</a>
-        <a href="#ai-prompt" onclick="showSection('ai-prompt')">AI Prompt 🎲</a>
-    </nav>
-</header>
+        <h1>Board Game Bonanza</h1>
+        <nav>
+            <a href="#what" onclick="showSection('what')">Home 🎲</a>
+            <a href="#who" onclick="showSection('who')">About 🎲</a>
+            <a href="#when" onclick="showSection('when')">When 🎲</a>
+            <a href="#where" onclick="showSection('where')">Where 🎲</a>
+            <a href="#how" onclick="showSection('how')">How 🎲</a>
+            <a href="#why" onclick="showSection('why')">Why 🎲</a>
+            <a href="#ai-prompt" onclick="showSection('ai-prompt')">AI Prompt 🎲</a>
+        </nav>
+    </header>
     <main>
         <section id="what">
-            <h2>What is  a Board Game Bonanza?</h2>
-            <p>Welcome to Board Game Bonanza, your ultimate source for all things about  tabletop gaming! Experience a diverse world of board games, from intricate strategy titles to lighthearted party games.</p>
+            <h2>What is a Board Game Bonanza?</h2>
+            <p>Welcome to Board Game Bonanza, your ultimate source for all things about tabletop gaming! Experience a diverse world of board games, from intricate strategy titles to lighthearted party games.</p>
             <figure>
                 <img src="https://image.pollinations.ai/prompt/Board%20game%20table%20top%20view?width=512&height=512&nologo=true" alt="Board Game Table Top View">
                 <figcaption>A diverse collection of different board games laid out on a table. Easy to learn hard to master! </figcaption>
                 <p style="font-style: italic;">Prompt: Board game table top view</p>
             </figure>
             <p>Our goal is to create a vibrant community where both novice and veteran gamers can discover new board games and experince the hobby in a different way from before .</p>
-            <p>Join us and experience the  endless possibilities of board game entertainment!</p>
+            <p>Join us and experience the endless possibilities of board game entertainment!</p>
         </section>
         <section id="who">
             <h2>About Our Community</h2>
-            <p>Our community is built on the shared love for board games. We are a diverse and quirky  group of individuals who come together to play, learn, and design different games. In order to appeal to our consumers. </p>
+            <p>Our community is built on the shared love for board games. We are a diverse and quirky group of individuals who come together to play, learn, and design different games. In order to appeal to our consumers. </p>
             <figure>
                 <img src="https://image.pollinations.ai/prompt/Group%20of%20people%20playing%20board%20games?width=512&height=512&nologo=true" alt="Group Playing Board Games">
                 <figcaption>A group of friends laughing and playing a board game.</figcaption>
@@ -163,7 +163,4 @@
         </section>
         <section id="where">
             <h2>Location and Venues</h2>
-            <p>We primarily meet at the Community Center located at 123 Main Street. Our venue is spacious and equipped with tables and chairs for comfortable gameplay. One of our major shops are located in London to </p>
-            <figure>
-                <img src="https://image.pollinations.ai/prompt/Map%20with%20board%20game%20markers?width=512&height=5</body>
-</html>
+            <p>We primarily meet at the Community Center located at 123 Main Street. Our venue is spacious and equipped with tables and chairs for comfortable
