--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
     <header>
         <h1>Board Game Bonanza</h1>
         <nav>
-            <a href="#what" onclick="showSection('what')">Home</a>
-            <a href="#who" onclick="showSection('who')">About</a>
-            <a href="#when" onclick="showSection('when')">When</a>
-            <a href="#where" onclick="showSection('where')">Where</a>
-            <a href="#how" onclick="showSection('how')">How</a>
-            <a href="#why" onclick="showSection('why')">Why</a>
-            <a href="#ai-prompt" onclick="showSection('ai-prompt')">AI Prompt</a>
+            <a href="#what" onclick="showSection('what')">Home 🎲</a>
+            <a href="#who" onclick="showSection('who')">About 🎲</a>
+            <a href="#when" onclick="showSection('when')">When 🎲</a>
+            <a href="#where" onclick="showSection('where')">Where 🎲</a>
+            <a href="#how" onclick="showSection('how')">How 🎲</a>
+            <a href="#why" onclick="showSection('why')">Why 🎲</a>
+            <a href="#ai-prompt" onclick="showSection('ai-prompt')">AI Prompt 🎲</a>
         </nav>
     </header>
     <main>
@@ -154,7 +154,7 @@
             <h2>Game Night Schedule</h2>
             <p>Our weekly game nights are held every Friday evening from 7 PM to 10 PM. We also host special events and tournaments on weekends.</p>
             <figure>
-                <img src="https://image.pollinations.ai/prompt/Clock%20with%0board%20game%20pieces?width=512&height=512&nologo=true" alt="Clock with Board Game Pieces">
+                <img src="https://image.pollinations.ai/prompt/Clock%20with%20board%20game%20pieces?width=512&height=512&nologo=true" alt="Clock with Board Game Pieces">
                 <figcaption>A clock surrounded by board game pieces, showing the time.</figcaption>
                 <p style="font-style: italic;">Prompt: Clock with board game pieces</p>
             </figure>
@@ -165,4 +165,6 @@
             <h2>Location and Venues</h2>
             <p>We primarily meet at the Community Center located at 123 Main Street. Our venue is spacious and equipped with tables and chairs for comfortable gameplay. One of our major shops are located in London to </p>
             <figure>
-                <img src="https://image.pollinations.ai/prompt/Map%20with%20board%20game%20markers?width=512&height=5
+                <img src="https://image.pollinations.ai/prompt/Map%20with%20board%20game%20markers?width=512&height=512&nologo=true" alt="Map with Board Game Markers">
+                <figcaption>A map showing the location of the Community Center and other venues.</figcaption>
+                <p style="font-style
